# bosun

./: README.md  pyproject.toml
src/bosun/: cli.py  core.py  logging.py  prompt.py  rendering.py
src/bosun/prompts/: task.md
tests/: test_core.py  test_prompt.py
